Fix word wrap in <code> for Firefox and IE

--- a/css/jekyll.css
+++ b/css/jekyll.css
@@ -97,6 +97,7 @@ ul.posts li {
   background-color: #eef;
   padding: 0 .2em;
   word-wrap: break-word;
+  white-space: pre-wrap; 
 }
 
 .post pre code {
